--- a/scripts/edld652-proposal.Rmd
+++ b/scripts/edld652-proposal.Rmd
@@ -13,16 +13,10 @@ library(tidyverse)
 library(here)
 library(janitor)
 library(skimr)
-
 ```
 
 ```{r list-datasets}
 list_datasets()
-```
-
-```{r download-test}
-acgd <- get_data("EDFacts_acgr_lea_2011_2019")
-math_lea_1019 <- get_data("EDFacts_math_achievement_lea_2010_2019")
 ```
 
 ```{r download-all-documentation}
@@ -62,20 +56,84 @@ math_lea_1019 <- get_data("EDFacts_math_achievement_lea_2010_2019")
 # get_documentation("NCES_CCD_nonfiscal_state_2017_2020_staff")
 # get_documentation("NCES_CCD_nonfiscal_state_2017_2021_membership")
 ```
+
 ```{r rebecca-datawrangling}
-mathlea <- get_data("EDFacts_math_achievement_lea_2010_2019")
+mathlea_10 <- get_data("EDFacts_math_achievement_lea_2010_2019")
 
-rlalea <- get_data("EDFacts_rla_achievement_lea_2010_2019")
+rlalea_10 <- get_data("EDFacts_rla_achievement_lea_2010_2019")
 
-skim(mathlea)
-skim(rlalea)
+skim(mathlea_10)
+skim(rlalea_10)
 
-mathlea %>% tabyl(ECD_MTHHSPCTPROF)
-mathlea %>% tabyl(LEP_MTHHSPCTPROF)
-mathlea %>% tabyl(HOM_MTHHSPCTPROF)
-mathlea %>% tabyl(MIG_MTHHSPCTPROF)
-mathlea %>% tabyl(CWD_MTHHSPCTPROF)
+mathlea_10 %>% tabyl(ECD_MTHHSPCTPROF)
+mathle_10 %>% tabyl(LEP_MTHHSPCTPROF)
+mathlea_10 %>% tabyl(HOM_MTHHSPCTPROF)
+mathlea_10 %>% tabyl(MIG_MTHHSPCTPROF)
+mathlea_10 %>% tabyl(CWD_MTHHSPCTPROF)
 
 ```
 
+```{r amy-prelimexploration}
+fiscal_lea_10 <- get_data("NCES_CCD_fiscal_district_2010")
+
+View(rlalea_10)
+View(fiscal_lea_10)
+
+colnames(rlalea_10)
+
+rlalea_10  %>% 
+  ggplot(aes(YEAR, ALL_RLA03PCTPROF)) +
+             geom_point()
+
+#This was when I realized the file didn't contain data from 2010 to 2019 (which I had thought initially for some reason). It only includes data from 2010.
+
+unique(rlalea_10$YEAR)
+skim(rlalea_10)
+
+# Going to need to clean these 
+rlalea_10 %>%
+  group_by(ALL_RLA03PCTPROF) %>% 
+  summarize(n = n())
+
+# Prelim exploration for fiscal file and local revenue
+skim(fiscal_lea_10)
+
+# Total local revenue (need to adjust x-axis)
+fiscal_lea_10 %>% 
+  ggplot(aes(TLOCREV)) +
+  geom_histogram()
+
+fiscal_lea_10 %>%
+  group_by(LEAID) %>% 
+  summarize(TLOCREV) 
+
+# Exploring local revenue solely from property taxes
+fiscal_lea_10 %>% 
+  ggplot(aes(T06)) +
+  geom_histogram()
+
+fiscal_lea_10 %>%
+  group_by(LEAID) %>% 
+  summarize(T06) 
+
+# Local funding in property tax per student
+fiscal_lea_10 <- fiscal_lea_10 %>% 
+  mutate(taxperstu = T06/V33)
+
+fiscal_lea_10$taxperstu
+
+fiscal_lea_10 %>% 
+  ggplot(aes(taxperstu)) +
+  geom_histogram()
+
+fiscal_lea_10 %>%
+  group_by(LEAID) %>% 
+  summarize(taxperstu)
+
+# I don't think this works b/c I need to clean values for the property tax variable before calculating tax per student
+fiscal_lea_10 %>%
+  summarize(min_taxperstu = min(taxperstu),
+            max_taxperstu = max(taxperstu)) 
+
+```
 
